Added Available vacation pacakges and laid them out in a grid. Customized bootstrap styling.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Vacation Site</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="container">
@@ -10,16 +11,110 @@
         <h1>Bahamas</h1>
         <p class="bg-success">Hawaii nice, Bahamas better</p>
       </div>
-      <h2>Max</h2>
-      <blockquote>
-        <p>"They were right"</p>
-        <footer class="bg-info">The Bahamas is better!</footer>
-      </blockquote>
-      <h2>Clara</h2>
-      <blockquote>
-        <p>"First time"</p>
-        <footer class="bg-info">Never been to Hawaii, but I don't go I'd rather go to the Bahamas again.</footer>
-      </blockquote>
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="card mb-3">
+            <img class="card-img-top" src="img/nassau.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title">Nassau</h4>
+              <p class="card-text">
+                <div class="list-group">
+                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                    <div class="d-flex w-100 justify-content-between">
+                      <h5 class="mb-1">Nov 16th - Nov 21st</h5>
+                      <small>Today</small>
+                    </div>
+                    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                    <small>Donec id elit non mi porta.</small>
+                  </a>
+                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex w-100 justify-content-between">
+                      <h5 class="mb-1">List group item heading</h5>
+                      <small class="text-muted">3 days ago</small>
+                    </div>
+                    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                    <small class="text-muted">Donec id elit non mi porta.</small>
+                  </a>
+                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex w-100 justify-content-between">
+                      <h5 class="mb-1">List group item heading</h5>
+                      <small class="text-muted">3 days ago</small>
+                    </div>
+                    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                    <small class="text-muted">Donec id elit non mi porta.</small>
+                  </a>
+                </div>
+              </p>
+              <a href="#" class="btn btn-primary">$3100</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="card mb-5">
+            <img class="card-img-top" src="img/grand.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title">Grand Bahama</h4>
+              <p class="card-text">
+                <div class="list-group">
+                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                    <div class="d-flex w-100 justify-content-between">
+                      <h5 class="mb-1">Nov 16th - Nov 21st</h5>
+                      <small>Today</small>
+                    </div>
+                    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                    <small>Donec id elit non mi porta.</small>
+                  </a>
+                </div>
+              </p>
+              <a href="#" class="btn btn-primary">$3000.00</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="card">
+            <img class="card-img-top" src="img/free.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title">Freeport</h4>
+              <p class="card-text">
+                <div class="list-group">
+                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                    <div class="d-flex w-100 justify-content-between">
+                      <h5 class="mb-1">Nov 16th - Nov 21st</h5>
+                      <small>Today</small>
+                    </div>
+                    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                    <small>Donec id elit non mi porta.</small>
+                  </a>
+                </div>
+              </p>
+              <a href="#" class="btn btn-primary">$2500</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="card">
+            <img class="card-img-top" src="img/abaco.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title">Abaco Islands</h4>
+              <p class="card-text">
+                <div class="list-group">
+                  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                    <div class="d-flex w-100 justify-content-between">
+                      <h5 class="mb-1">Nov 16th - Nov 21st</h5>
+                      <small>Today</small>
+                    </div>
+                    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                    <small>Donec id elit non mi porta.</small>
+                  </a>
+                </div>
+              </p>
+              <a href="#" class="btn btn-danger">$400</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
